Fixing few lint issues